# TLEGO

./: .gitignore  README.md  README.txt  TLEGO.R  startExperiment.R
helpers/: LinearizeNestedList.R  addAllModelsToMasterTable.R  addResultsToMasterTable.R  addRow.R  addToExperiment.R  checkMasterTableConsistency.R  checkModelFiles.R  continueAllNotStarted.R  continueNotStarted.R  convertTable.R  countNotFinishedExperiments.R  countOrphans.R  createMasterTableFromPath.R  createOrLoadRegistry.R  determineMissingCases.R  diffTable.R  evaluatePoint.R  fExecuteTLSVMSolver.R  fOptValues.R  fValidateTLSVM.R  fValidateTLSVM_BAD.R  fillToLogPoints.R  findOrphansInFolders.R  fixFinalModelTime.R  fixModelAndRegistryPaths.R  fixTimings.R  getOrphansFromRegistry.R  getResultsFromRegistry.R  lsdir.R  makeTrainTestSplit.R  mergeResults.R  optValuesPoint.R  optValuesResults.R  optValuesRows.R  plotHelper.R  removeNotFinished.R  sourceDir.R  splitDatasets.R  system3.R  trainPoint.R  (+5 more)
parego/: allResults.RData  pareto_aXa  pareto_arthrosis  pareto_cod-rna  pareto_covtype  pareto_ijcnn1  pareto_mnist  pareto_poker  pareto_protein  pareto_shuttle  pareto_spektren  pareto_vehicle  pareto_wXa
results/: finalTestResults.RData
software/: CMakeLists.txt
software/BudgetedSVM/: .gitignore  BSGD_walltime_wrapper.R
software/BudgetedSVM/src/: README.txt
software/BudgetedSVM/src/doc/: budgetedSVM.dox  doxygen_readme.txt  mainpage.dox
software/BudgetedSVM/src/doc/html/: annotated.html  bsgd_8h.html  bsgd_8h_source.html  budgeted_s_v_m_8h.html  budgeted_s_v_m_8h_source.html  budgeted_s_v_m__matlab_8h.html  budgeted_s_v_m__matlab_8h_source.html  classbudgeted_data-members.html  classbudgeted_data.html  classbudgeted_data_matlab-members.html  classbudgeted_data_matlab.html  classbudgeted_model-members.html  classbudgeted_model.html  classbudgeted_model_a_m_m-members.html  classbudgeted_model_a_m_m.html  classbudgeted_model_b_s_g_d-members.html  classbudgeted_model_b_s_g_d.html  classbudgeted_model_l_l_s_v_m-members.html  classbudgeted_model_l_l_s_v_m.html  classbudgeted_model_matlab-members.html  classbudgeted_model_matlab.html  classbudgeted_model_matlab_a_m_m-members.html  classbudgeted_model_matlab_a_m_m.html  classbudgeted_model_matlab_b_s_g_d-members.html  classbudgeted_model_matlab_b_s_g_d.html  classbudgeted_model_matlab_l_l_s_v_m-members.html  classbudgeted_model_matlab_l_l_s_v_m.html  classbudgeted_vector-members.html  classbudgeted_vector.html  classbudgeted_vector_a_m_m-members.html  classbudgeted_vector_a_m_m.html  classbudgeted_vector_b_s_g_d-members.html  classbudgeted_vector_b_s_g_d.html  classbudgeted_vector_l_l_s_v_m-members.html  classbudgeted_vector_l_l_s_v_m.html  classes.html  dir_641426648b87190735e32d16e29b20cb.html  dir_6ae30fc18a37e1532fed8b37fc86e770.html  dir_b804adc264ae06d6579c49d96bfa5440.html  files.html  (+15 more)
software/BudgetedSVM/src/doc/html/search/: all_62.js  all_63.js  all_64.js  all_67.js  all_70.js  functions_62.js  functions_70.js  search.js  variables_64.js
software/BudgetedSVM/src/matlab/: README.txt  budgetedSVM_matlab.cpp  budgetedSVM_matlab.h  budgetedsvm_predict.cpp  budgetedsvm_predict.mexw32  budgetedsvm_train.cpp  budgetedsvm_train.mexw32  libsvmread.mexw32  libsvmwrite.mexw32
software/BudgetedSVM/src/src/: bsgd.cpp  bsgd.h  budgetedSVM.cpp  budgetedSVM.h  budgetedsvm-predict.cpp  budgetedsvm-train.cpp  llsvm.cpp  llsvm.h  mm_algs.cpp  mm_algs.h
software/LASVM/: LASVM_walltime_wrapper.R
software/LASVM/src/: .gitignore  la_svm.cpp  la_test.cpp
software/LIBSVM/: LIBSVM_walltime_wrapper.R  libSVM.txt  libSVM.yml  wrapper.R
software/LIBSVM/docs/: index.html
software/LIBSVM/src/: svm-train.c  svm.cpp
software/SVMperf/: SVMperf_walltime_wrapper.R
software/SVMperf/src/: .gitignore  svm_struct_api.c  svm_struct_learn_custom.c
software/SVMperf/src/svm_light/: svm_common.c  svm_common.h  svm_hideo.c  svm_learn.c
software/SVMperf/src/svm_struct/: svm_struct_common.c  svm_struct_common.h  svm_struct_learn.c  svm_struct_main.c
software/libCVM/: BVM_walltime_wrapper.R  CVM_walltime_wrapper.R
software/libCVM/src/: Makefile
software/libCVM/src/libCVM/: CMakeLists.txt  svm-train.cpp
software/libCVM/src/libCVM/libCVM/: CMakeLists.txt  Makefile  bvm.cpp  bvm.h  cvm.cpp  cvm_core.cpp  svm.cpp  svm.h  utility.cpp  utility.h
